--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Temperature in San Francisco Line Chart</title>
+    <title>Henry Hub Natural gas spot price</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/d3@5.6.0/dist/d3.min.js"></script>
   </head>
